# BasicQt

./: CMakeLists.txt  CMakeSettings.json  LearningQt.rc  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.h  screenshot.cpp  screenshot.h  style.cpp  style.h  theme.css
gtests/: CMakeLists.txt  gtests.cpp  gtests.h
vstests/: CMakeLists.txt  utests.cpp  utests.h
